# safe-roads

./: .dockerfile  .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.worker.dockerfile  Readme.md  deploy_requirements.txt  docker-compose.deploy.yml  docker-compose.train.yml  docker-compose.yml  pyproject.toml  requirements.txt  worker.dockerfile
.github/workflows/: docker-image.yml  ec2-schedule.yml
configs/: app.yml  config.yml  hyperopt_catboost.yml  train.yml
data/init/: 000-init.sql  001-create-mlflow-schema.sql
docker/: Dockerfile  mlflow-postgres.dockerfile  postgres_h3.dockerfile
src/safe_roads/data/: data_loader.py
src/safe_roads/deploy/: commit_to_git.py  deploy.py  fetch_weather_hourly.py  predict.py  transform_live_data.py
src/safe_roads/flows/: fetch_latest_osm_data.py  ingest_OSM_data.py  ingest_collision_data.py  ingest_load_negatives.py  ingest_weather_data.py  transform_live_data.py
src/safe_roads/model/: eval.py  eval_SHAP.py  hypeopt.py  hypeopt_catboost.py  map.py  pred.py  test.py  train_catboost.py  train_xgboost.py  upload_model.py
src/safe_roads/query/: data_leakage.sql  test.sql
src/safe_roads/query/additional_features/: add_h3_res.sql  combine_dataset.sql  combined_dataset.sql  cyclic_time_features.sql  (+2 more)
src/safe_roads/tasks/: create_collision_h3.py  download_collision_data.py  download_collision_file.py  get_london_h3_data.py  get_osmx_data.py  load_csv_to_postgres.py  prepare_collision_data.py
src/safe_roads/utils/: config.py  data.py  geo.py  io.py  mlutil.py
systemd/: saferoads.service  saferoads.timer
(+49 files in other folders)
