[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saferoads"
version = "0.1.0"
dependencies = [
  "requests",
  "PyYAML",
  "prefect>=3",
  "mlflow",
  "catboost",
  "pandas",
  "numpy",
  "scikit-learn",
  "psycopg[binary]>=3",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
